--- a/webui/package.json
+++ b/webui/package.json
@@ -9,7 +9,7 @@
     "http-proxy-middleware": "0.21.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "4.0.1",
     "winston": "3.3.3"
   },
   "scripts": {
@@ -37,8 +37,8 @@
   "homepage": ".",
   "proxy": "http://localhost:8084",
   "devDependencies": {
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
+    "@material-ui/core": "4.11.4",
+    "@material-ui/icons": "4.11.2",
     "ramda": "0.27.1",
     "styled-components": "4.4.1"
   }
